--- a/Batocera Linux/batocera-es-system.po
+++ b/Batocera Linux/batocera-es-system.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Batocera.linux Options\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2025-04-01 20:11+0200\n"
+"PO-Revision-Date: 2025-04-02 07:28+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: Swedish\n"
 "Language: sv_SE\n"
@@ -2200,7 +2200,7 @@ msgstr "LÄGG TILL ANVÄNDARDISK"
 #. TRANSLATION: rpcs3
 msgctxt "game_options"
 msgid "ADDITIONAL FRAMELIMIT"
-msgstr "YTTERLIGARE FRAMELIMIT"
+msgstr "YTTERLIGARE BILDFREKVENSGRÄNS"
 
 #. TRANSLATION: supermodel
 msgctxt "game_options"
@@ -3576,7 +3576,7 @@ msgstr "BOBBA FETT FIX"
 #. TRANSLATION: lindbergh-loader
 msgctxt "game_options"
 msgid "BOOST RENDER RES"
-msgstr "ÖKA RENDERINGSRESERVEN"
+msgstr "ÖKA RENDERINGSUPPLÖSNING"
 
 #. TRANSLATION: libretro/puae, libretro/puae2021
 msgctxt "game_options"
@@ -4832,7 +4832,7 @@ msgstr "Ändra kvaliteten på algoritmen för bildskalning."
 #. TRANSLATION: amiberry
 msgctxt "game_options"
 msgid "Change pixel scaling and filtering method."
-msgstr "Ändra pixelskalning och filtreringsmetod."
+msgstr "Ändra bildpunktsskalning och filtreringsmetod."
 
 #. TRANSLATION: dolphin
 msgctxt "game_options"
@@ -5167,7 +5167,7 @@ msgstr "Välj önskad Atari CPU-typ."
 #. TRANSLATION: libretro/hatarib
 msgctxt "game_options"
 msgid "Choose your desired Atari Monitor."
-msgstr "Välj önskad Atari Monitor."
+msgstr "Välj önskad Atari-monitor."
 
 #. TRANSLATION: libretro/hatarib
 msgctxt "game_options"
@@ -5187,7 +5187,7 @@ msgstr "Välj önskad typ av visning av pausskärmen."
 #. TRANSLATION: libretro/hatarib
 msgctxt "game_options"
 msgid "Choose your desired pixel aspect ratio."
-msgstr "Välj önskat bildförhållande för pixlarna."
+msgstr "Välj önskat bildförhållande för bildpunkter."
 
 #. TRANSLATION: redream
 msgctxt "game_options"
@@ -7734,7 +7734,7 @@ msgstr "Fixar texturbandning vid uppskalning."
 #. TRANSLATION: libretro/opera
 msgctxt "game_options"
 msgid "Fixes a possible bug with multiple controllers detection."
-msgstr "Åtgärdar ett möjligt fel med detektering av flera styrenheter."
+msgstr "Åtgärdar ett möjligt fel med detektering av flera kontroller."
 
 #. TRANSLATION: bigpemu
 msgctxt "game_options"
@@ -9196,7 +9196,7 @@ msgstr "Öka emulatorns prestanda på bekostnad av noggrannhet/stabilitet."
 #. TRANSLATION: xemu
 msgctxt "game_options"
 msgid "Increase to 128 MiB for debug or homebrew applications."
-msgstr "Öka till 128 MiB för debug- eller homebrew-applikationer."
+msgstr "Öka till 128 MiB för felsökning- eller homebrew-applikationer."
 
 #. TRANSLATION: xenia, xenia-canary
 msgctxt "game_options"
@@ -11579,17 +11579,17 @@ msgstr "Öppna meny"
 #. TRANSLATION: corsixth.keys
 msgctxt "keys_files"
 msgid "Open build room menu"
-msgstr "Öppna menyn för byggrum"
+msgstr "Öppna byggmenyn för rum"
 
 #. TRANSLATION: rott.keys
 msgctxt "keys_files"
 msgid "Open door"
-msgstr "Öppen dörr"
+msgstr "Öppna dörr"
 
 #. TRANSLATION: corsixth.keys
 msgctxt "keys_files"
 msgid "Open furnish corridor menu"
-msgstr "Öppna menyn för inredningskorridorer"
+msgstr "Öppna inredningsmenyn för korridorer"
 
 #. TRANSLATION: cemu, dolphin, duckstation, hypseus-singe, libretro, ...
 msgctxt "game_options"
@@ -12290,7 +12290,7 @@ msgstr "Portugisiska"
 msgctxt "game_options"
 msgid "Position of wii sensor bar relative to the disaply for real wiimotes."
 msgstr ""
-"Wii sensorbarens position i förhållande till disaply för riktiga wiimotes."
+"Wii sensorbarens position i förhållande till skärmen för riktiga wiimotes."
 
 #. TRANSLATION: libretro/potator
 msgctxt "game_options"
@@ -12485,7 +12485,7 @@ msgstr "LÄS FRAMEBUFFERTEN VARJE BILDRUTA (GLIDE64MK2)"
 #. TRANSLATION: xenia, xenia-canary
 msgctxt "game_options"
 msgid "READBACK RESOLVE"
-msgstr "ÅTERLÄSNINGSLÖSNING"
+msgstr ""
 
 #. TRANSLATION: libretro/np2kai
 msgctxt "game_options"
@@ -12909,7 +12909,7 @@ msgstr "Upplösningsmultiplikatorer för att jämna ut vektorer"
 #. TRANSLATION: hypseus-singe/uzem
 msgctxt "game_options"
 msgid "Restore BLENDMODE outline on Singe sprites."
-msgstr "Återställ BLENDMODE-konturen på Singe-sprites."
+msgstr "Återställ BLANDNINGSLÄGE-konturen på Singe-sprites."
 
 #. TRANSLATION: hotkeys.keys
 msgctxt "keys_files"
@@ -12944,7 +12944,7 @@ msgstr "Spola tillbaka"
 #. TRANSLATION: libretro/dosbox_pure
 msgctxt "game_options"
 msgid "Rewind can be CPU heavy."
-msgstr "Återspolning kan vara CPU-tungt."
+msgstr "Tillbakaspolning kan vara CPU-tungt."
 
 #. TRANSLATION: libretro/parallel_n64
 msgctxt "game_options"
@@ -14885,12 +14885,12 @@ msgid ""
 "Switches between smooth (Bilinear) and sharp (Nearest Neighbor) image "
 "scaling."
 msgstr ""
-"Växlar mellan jämn (Bilinear) och skarp (Nearest Neighbor) bildskalning."
+"Växlar mellan jämn (Bilinjär) och skarp (Närmaste granne) bildskalning."
 
 #. TRANSLATION: bigpemu
 msgctxt "game_options"
 msgid "Switches the game to multiplayer mode."
-msgstr "Växlar spelet till multiplayer-läge."
+msgstr "Växlar spelet till flerspelarläge."
 
 #. TRANSLATION: xenia, xenia-canary
 msgctxt "game_options"
@@ -15128,7 +15128,7 @@ msgstr "TRIPPELBUFFRING"
 #. TRANSLATION: duckstation
 msgctxt "game_options"
 msgid "TRUE COLOUR RENDERING"
-msgstr "ÅTERGIVNING AV ÄKTA FÄRGER"
+msgstr "TRUE COLOUR-RENDERING"
 
 #. TRANSLATION: libretro/hatarib
 msgctxt "game_options"
@@ -15360,7 +15360,7 @@ msgstr "Växla körning"
 #. TRANSLATION: rott.keys
 msgctxt "keys_files"
 msgid "Toggle weapon"
-msgstr "Växla mellan vapen"
+msgstr "Växla vapen"
 
 #. TRANSLATION: libretro/mame, mame/pcsx2
 msgctxt "game_options"
@@ -16333,7 +16333,7 @@ msgstr "Vertikal"
 #. TRANSLATION: vpinball
 msgctxt "game_options"
 msgid "Vertical Sync"
-msgstr "Vänta på vertikal synkronisering"
+msgstr "Vertikal synk"
 
 #. TRANSLATION: libretro/fceumm, libretro/mesen, libretro/mesen-s, mupen64plus
 msgctxt "game_options"
@@ -16468,7 +16468,7 @@ msgstr "BREDBILDSFUSK (PRIORITET)"
 #. TRANSLATION: dolphin, dolphin_triforce, duckstation, libretro/dolphin, libretro/duckstation, ...
 msgctxt "game_options"
 msgid "WIDESCREEN HACK (GLITCHY)"
-msgstr "WIDESCREEN HACK (GLITCHIGT)"
+msgstr "BREDBILDSHACK (GLITCHIGT)"
 
 #. TRANSLATION: dolphin
 msgctxt "game_options"
@@ -16518,12 +16518,12 @@ msgstr "Svag"
 #. TRANSLATION: pcsx2
 msgctxt "game_options"
 msgid "Weave (Bottom Field First)"
-msgstr "Vävning (bottenfält först)"
+msgstr "Weave (bottenfält först)"
 
 #. TRANSLATION: pcsx2
 msgctxt "game_options"
 msgid "Weave (Top Field First)"
-msgstr "Vävning (översta fältet först)"
+msgstr "Weave (översta fältet först)"
 
 #. TRANSLATION: drastic
 msgctxt "game_options"
@@ -16684,7 +16684,7 @@ msgstr "XBOX LIVE ARCADE"
 #. TRANSLATION: libretro/vice_x128, libretro/vice_xpet, libretro/vice_xplus4, libretro/vice_xvic
 msgctxt "game_options"
 msgid "Y = Fire"
-msgstr "Y = Brand"
+msgstr "Y = Skjut"
 
 #. TRANSLATION: libretro/vice_x128, libretro/vice_xpet, libretro/vice_xplus4, libretro/vice_xvic
 msgctxt "game_options"
@@ -16724,17 +16724,17 @@ msgstr "NOGGRANNHET FÖR ZCULL"
 #. TRANSLATION: libretro/bluemsx, libretro/fuse, vice
 msgctxt "game_options"
 msgid "ZOOM (HIDE BORDERS)"
-msgstr "ZOOM (DÖLJ GRÄNSER)"
+msgstr "ZOOM (DÖLJ RAMAR)"
 
 #. TRANSLATION: libretro/puae, libretro/puae2021, libretro/vice_x128, libretro/vice_x64, libretro/vice_x64sc, ...
 msgctxt "game_options"
 msgid "ZOOM/CROP (HIDE BORDERS)"
-msgstr "ZOOM/BESKÄRNING (DÖLJ GRÄNSER)"
+msgstr "ZOOM/BESKÄR (DÖLJ RAMAR)"
 
 #. TRANSLATION: shared
 msgctxt "game_options"
 msgid "Zone for which the game doesn't react to the wheel (in degrees)"
-msgstr "Zon som spelet inte reagerar på hjulet för (i grader)"
+msgstr "Zon som spelet inte reagerar på ratten för (i grader)"
 
 #. TRANSLATION: corsixth.keys
 msgctxt "keys_files"
@@ -16764,8 +16764,7 @@ msgstr "Zooma in för att dölja svarta kanter."
 #. TRANSLATION: duckstation, libretro/duckstation, libretro/fceumm, libretro/nestopia, libretro/swanstation
 msgctxt "game_options"
 msgid "Zooms in to hide black borders. Borders are different per game."
-msgstr ""
-"Zooma in för att dölja svarta kanter. Gränserna är olika för olika spel."
+msgstr "Zooma in för att dölja svarta kanter. Kanter är olika för olika spel."
 
 #. TRANSLATION: bstone.keys
 msgctxt "keys_files"
