--- a/Batocera Linux/batocera-es-system.po
+++ b/Batocera Linux/batocera-es-system.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Batocera.linux Options\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2025-04-02 07:28+0200\n"
+"PO-Revision-Date: 2025-04-02 07:47+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: Swedish\n"
 "Language: sv_SE\n"
@@ -5592,7 +5592,7 @@ msgstr "DEKORATIONER"
 #. TRANSLATION: libretro/mesen
 msgctxt "game_options"
 msgid "DEFAULT POWER ON RAM STATE"
-msgstr ""
+msgstr "POWER ON RAM-TILLSTÅND SOM STANDARD"
 
 #. TRANSLATION: pcsx2
 msgctxt "game_options"
@@ -6178,7 +6178,7 @@ msgstr "Släpp vapnet"
 #. TRANSLATION: libretro/snes9x_next
 msgctxt "game_options"
 msgid "Dual Konami Justifiers"
-msgstr ""
+msgstr "Dual Konami Justifiers"
 
 #. TRANSLATION: duckstation
 msgctxt "game_options"
@@ -9538,7 +9538,7 @@ msgstr "juni"
 #. TRANSLATION: libretro/mednafen_psx
 msgctxt "game_options"
 msgid "Justifier"
-msgstr ""
+msgstr "Justifier"
 
 #. TRANSLATION: drastic
 msgctxt "game_options"
@@ -9998,7 +9998,7 @@ msgstr ""
 #. TRANSLATION: vpinball.keys
 msgctxt "keys_files"
 msgid "Lockbar Fire Button"
-msgstr ""
+msgstr "Lockbar skjutknapp"
 
 #. TRANSLATION: vpinball
 msgctxt "game_options"
@@ -10887,7 +10887,7 @@ msgstr "NEJ (STANDARD)"
 #. TRANSLATION: wine
 msgctxt "game_options"
 msgid "NO WRITE WATCH"
-msgstr ""
+msgstr "INGEN SKRIVNINGSKONTROLL"
 
 #. TRANSLATION: libretro/bsnes
 msgctxt "game_options"
@@ -11278,7 +11278,7 @@ msgstr "Knuffa vänster"
 #. TRANSLATION: vpinball.keys
 msgctxt "keys_files"
 msgid "Nudge right"
-msgstr ""
+msgstr "Knuffa höger"
 
 #. TRANSLATION: vpinball.keys
 msgctxt "keys_files"
@@ -11789,7 +11789,7 @@ msgstr "PCjr"
 #. TRANSLATION: libretro/mame, mame/pcsx2
 msgctxt "game_options"
 msgid "PDP-1 Paper Tape Reader Images"
-msgstr ""
+msgstr "PDP-1 pappersremsor-avbilder"
 
 #. TRANSLATION: vpinball
 msgctxt "game_options"
@@ -12415,7 +12415,7 @@ msgstr "Puerto Rico"
 #. TRANSLATION: vpinball.keys
 msgctxt "keys_files"
 msgid "Pull plunger"
-msgstr ""
+msgstr "Dra i vaskrensaren"
 
 #. TRANSLATION: libretro
 msgctxt "game_options"
@@ -12445,7 +12445,7 @@ msgstr "QUAD-RENDERING"
 #. TRANSLATION: xenia, xenia-canary
 msgctxt "game_options"
 msgid "QUERY OCCLUSION"
-msgstr ""
+msgstr "QUERY OCCLUSION"
 
 #. TRANSLATION: moonlight
 msgctxt "game_options"
@@ -12485,7 +12485,7 @@ msgstr "LÄS FRAMEBUFFERTEN VARJE BILDRUTA (GLIDE64MK2)"
 #. TRANSLATION: xenia, xenia-canary
 msgctxt "game_options"
 msgid "READBACK RESOLVE"
-msgstr ""
+msgstr "READBACK RESOLVE"
 
 #. TRANSLATION: libretro/np2kai
 msgctxt "game_options"
@@ -12885,7 +12885,7 @@ msgstr ""
 #. TRANSLATION: hotkeys.keys
 msgctxt "keys_files"
 msgid "Reset"
-msgstr ""
+msgstr "Nollställ"
 
 #. TRANSLATION: wine
 msgctxt "game_options"
@@ -13233,7 +13233,7 @@ msgstr "SDL-KONFIG"
 #. TRANSLATION: hypseus-singe
 msgctxt "game_options"
 msgid "SDL TEXTURE ACCESS STREAMING"
-msgstr ""
+msgstr "SDL-TEXTURÅTKOMST FÖR STRÖMNING"
 
 #. TRANSLATION: libretro, lindbergh-loader
 msgctxt "game_options"
@@ -13388,7 +13388,7 @@ msgstr "JÄMNA UT SPEL (BILINJÄR FILTRERING)"
 #. TRANSLATION: theforceengine
 msgctxt "game_options"
 msgid "SMOOTH VUES"
-msgstr ""
+msgstr "MJUKA VYER"
 
 #. TRANSLATION: libretro/snes9x, libretro/snes9x_next
 msgctxt "game_options"
@@ -16278,7 +16278,7 @@ msgstr "VIRTUELLT SKRIVBORD"
 #. TRANSLATION: vpinball
 msgctxt "game_options"
 msgid "VISUAL NUDGE STRENGTH"
-msgstr ""
+msgstr "VISUELL KNUFFSTYRKA"
 
 #. TRANSLATION: bigpemu, bstone, cemu, citra, dolphin, ...
 msgctxt "game_options"
