--- a/Batocera Linux/batocera-es-system.po
+++ b/Batocera Linux/batocera-es-system.po
@@ -1,7 +1,7 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Swedish translation for Batocera.linux options.
+# Copyright (C) 2025 Batocera.linux
+# This file is distributed under the same license as the Batocera.linux package.
+# Daniel Nylander <po@danielnylander.se>, 2025.
 #
 msgid ""
 msgstr ""
@@ -30,7 +30,7 @@ msgstr " 7.09 MHz (A500-hastighet)"
 #. TRANSLATION: libretro/mesen
 msgctxt "game_options"
 msgid "(FDS) AUTOMATICALLY LOAD DISK SIDE A"
-msgstr "(FDS) LADDAR AUTOMATISKT DISKEN SIDA A"
+msgstr "(FDS) LÄSER AUTOMATISKT IN DISKENS SIDA A"
 
 #. TRANSLATION: libretro/mesen
 msgctxt "game_options"
