--- a/Inkscape/inkscape.po
+++ b/Inkscape/inkscape.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: inkscape\n"
 "Report-Msgid-Bugs-To: inkscape-translator@lists.inkscape.org\n"
 "POT-Creation-Date: 2025-05-12 20:42+0200\n"
-"PO-Revision-Date: 2025-05-13 16:26+0200\n"
+"PO-Revision-Date: 2025-05-13 17:37+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: Svenska <tp-sv@listor.tp-sv.se>\n"
 "Language: sv\n"
@@ -6574,7 +6574,7 @@ msgstr "Växla snäppning till spetsnoder, inklusive rektangelhörn"
 
 #: ../src/actions/actions-canvas-snapping.cpp:264
 msgid "Snap Smooth Node"
-msgstr "Snap Smooth Node"
+msgstr "Fäst mjuk nod"
 
 #: ../src/actions/actions-canvas-snapping.cpp:264
 msgid "Toggle snapping to smooth nodes, including quadrant points of ellipses"
@@ -7011,7 +7011,7 @@ msgstr "Öppna filtereffekter"
 
 #: ../src/actions/actions-dialogs.cpp:43
 msgid "Manage, edit, and apply SVG filters"
-msgstr "Hantera, editera och applicera SVG-filter"
+msgstr "Hantera, redigera och applicera SVG-filter"
 
 #: ../src/actions/actions-dialogs.cpp:44
 msgid "Open Filter Gallery"
@@ -7067,7 +7067,7 @@ msgstr "Öppna slingeffekt"
 
 #: ../src/actions/actions-dialogs.cpp:50
 msgid "Manage, edit, and apply path effects"
-msgstr "Hantera, editera och applicera slingeffekter"
+msgstr "Hantera, redigera och applicera slingeffekter"
 
 #: ../src/actions/actions-dialogs.cpp:51
 msgid "Open Object Properties"
@@ -9408,11 +9408,11 @@ msgstr "Platta ut ett eller flera överlappande objekt till deras synliga delar"
 
 #: ../src/actions/actions-paths.cpp:260 ../share/ui/menus.ui:1064
 msgid "Fill between paths"
-msgstr "Fyll mellan banorna"
+msgstr "Fyll mellan slingor"
 
 #: ../src/actions/actions-paths.cpp:260
 msgid "Create a fill object using the selected paths"
-msgstr "Skapa ett fyllningsobjekt med hjälp av de markerade banorna"
+msgstr "Skapa ett fyllningsobjekt med hjälp av de markerade slingor"
 
 #: ../src/actions/actions-paths.cpp:261
 #: ../src/extension/internal/filter/paint.h:345
@@ -10049,11 +10049,11 @@ msgstr "Markera och transformera objekt"
 
 #: ../src/actions/actions-tools.cpp:283 ../src/ui/modifiers.cpp:127
 msgid "Node Tool"
-msgstr "Node-verktyg"
+msgstr "Nodverktyg"
 
 #: ../src/actions/actions-tools.cpp:283
 msgid "Edit paths by nodes"
-msgstr "Editera slingors noder"
+msgstr "Redigera slingors noder"
 
 #: ../src/actions/actions-tools.cpp:284
 msgid "Shape Builder Tool"
@@ -17113,7 +17113,7 @@ msgstr "Redigera parameter <b>%s</b>."
 #: ../src/live_effects/effect.cpp:2006
 msgid "None of the applied path effect's parameters can be edited on-canvas."
 msgstr ""
-"Ingen av de tilldelade effekternas parametrar kan editeras i dokumentet."
+"Ingen av de tilldelade effekternas parametrar kan redigeras i dokumentet."
 
 #: ../src/live_effects/lpe-angle_bisector.cpp:46
 #: ../src/live_effects/lpe-parallel.cpp:52
@@ -23653,7 +23653,7 @@ msgstr ""
 
 #: ../src/ui/dialog/clonetiler.cpp:692
 msgid "<b>H:</b>"
-msgstr "<b>N:</b>"
+msgstr "<b>H:</b>"
 
 #: ../src/ui/dialog/clonetiler.cpp:699
 msgid "Change the tile hue by this percentage for each row"
@@ -23669,7 +23669,7 @@ msgstr "Slumpa brickornas nyans med denna procentandel"
 
 #: ../src/ui/dialog/clonetiler.cpp:720
 msgid "<b>S:</b>"
-msgstr "<b>M:</b>"
+msgstr "<b>S:</b>"
 
 #: ../src/ui/dialog/clonetiler.cpp:727
 msgid "Change the color saturation by this percentage for each row"
@@ -23908,7 +23908,7 @@ msgstr "Skapa brickkloner av markeringen"
 #. So unclumping is the process of spreading a number of objects out more evenly.
 #: ../src/ui/dialog/clonetiler.cpp:1179
 msgid " _Unclump "
-msgstr ""
+msgstr " A_vklumpa "
 
 #: ../src/ui/dialog/clonetiler.cpp:1180
 msgid "Spread out clones to reduce clumping; can be applied repeatedly"
@@ -31355,7 +31355,7 @@ msgstr "Plats för användarens symboler"
 
 #: ../src/ui/dialog/inkscape-preferences.cpp:3846
 msgid "Open paint servers folder"
-msgstr "Öppna mappen Paint servers"
+msgstr "Öppna mappen med målarservrar"
 
 #: ../src/ui/dialog/inkscape-preferences.cpp:3848
 msgid "User paint servers:"
@@ -34856,7 +34856,7 @@ msgstr ""
 
 #: ../src/ui/tools/calligraphic-tool.cpp:454
 msgid "<b>Select a guide path</b> to track with <b>Ctrl</b>"
-msgstr "<b>Markera en stödslinga</b> att spåra med <b>Ctrl</b>"
+msgstr "<b>Markera en hjälpslinga</b> att spåra med <b>Ctrl</b>"
 
 #: ../src/ui/tools/calligraphic-tool.cpp:588
 msgid "Tracking: <b>connection to guide path lost!</b>"
@@ -34864,7 +34864,7 @@ msgstr "Spårar: <b>förbindelse till hjälpslinga förlorad!</b>"
 
 #: ../src/ui/tools/calligraphic-tool.cpp:588
 msgid "<b>Tracking</b> a guide path"
-msgstr "<b>Spårning</b> av en stödslinga"
+msgstr "<b>Spårning</b> av en hjälpslinga"
 
 #: ../src/ui/tools/calligraphic-tool.cpp:591
 msgid "<b>Drawing</b> a calligraphic stroke"
@@ -35836,7 +35836,7 @@ msgstr "<b>Flödade textram</b>: %s × %s"
 #: ../src/ui/tools/text-tool.cpp:498
 msgid "<b>Click</b> to edit the text, <b>drag</b> to select part of the text."
 msgstr ""
-"<b>Klicka</b> för att editera texten, <b>dra</b> för att markera en del av "
+"<b>Klicka</b> för att redigera texten, <b>dra</b> för att markera en del av "
 "texten."
 
 #: ../src/ui/tools/text-tool.cpp:502
@@ -36011,7 +36011,7 @@ msgid ""
 "<b>Drag</b> to create a star. <b>Drag controls</b> to edit the star shape. "
 "<b>Click</b> to select."
 msgstr ""
-"<b>Dra</b> för att skapa en stjärna. <b>Dra kontroller</b> för att editera "
+"<b>Dra</b> för att skapa en stjärna. <b>Dra kontroller</b> för att redigera "
 "stjärnformen. <b>Klicka</b> för att välja."
 
 #: ../src/ui/tools/tool-data.cpp:52
@@ -36028,7 +36028,7 @@ msgid ""
 "<b>Drag</b> to create a spiral. <b>Drag controls</b> to edit the spiral "
 "shape. <b>Click</b> to select."
 msgstr ""
-"<b>Dra</b> för att skapa en spiral. <b>Dra kontroller</b> för att editera "
+"<b>Dra</b> för att skapa en spiral. <b>Dra kontroller</b> för att redigera "
 "spiralformen. <b>Klicka</b> för att välja."
 
 #: ../src/ui/tools/tool-data.cpp:54
@@ -40966,7 +40966,7 @@ msgstr "Symboler..."
 
 #: ../share/ui/menus.ui:781
 msgid "_Paint Servers..."
-msgstr ""
+msgstr "_Målarservrar..."
 
 #: ../share/ui/menus.ui:787
 msgid "_Selectors and CSS..."
@@ -46164,7 +46164,7 @@ msgid ""
 "other path's node positions. The second option removes extra nodes of the "
 "longer path."
 msgstr ""
-"Det första alternativet omdiskretiserar båda banorna före interpoleringen "
+"Det första alternativet omdiskretiserar båda slingor före interpoleringen "
 "med den andra banans nodpositioner. Det andra alternativet tar bort extra "
 "noder i den längre sökvägen."
 
@@ -46978,7 +46978,7 @@ msgstr "Skärmärken"
 
 #: ../share/extensions/layout_nup.inx:42
 msgid "Padding guide"
-msgstr "Guide för stoppning"
+msgstr "Guide för utfyllnad"
 
 #: ../share/extensions/layout_nup.inx:43
 msgid "Margin guide"
@@ -47303,7 +47303,7 @@ msgid ""
 "Bezier curves. If a circle is used, the area may be too high by as much as "
 "0.03%."
 msgstr ""
-"Denna effekt mäter längd, yta eller tyngdpunkt för de markerade banorna. "
+"Denna effekt mäter längd, yta eller tyngdpunkt för de markerade slingorna. "
 "Längd och area läggs till som ett textobjekt med de valda enheterna. "
 "Masscentrum visas som en korssymbol.\n"
 "\n"
